#denrashodchikov hw6