@@ -1,138 +1,120 @@
 package ru.javawebinar.basejava.storage;
 
+import org.junit.Before;
+import org.junit.Test;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.opentest4j.AssertionFailedError;
 import ru.javawebinar.basejava.exception.ExistStorageException;
 import ru.javawebinar.basejava.exception.NotExistStorageException;
-import ru.javawebinar.basejava.exception.StorageException;
 import ru.javawebinar.basejava.model.Resume;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
+import static org.junit.Assert.assertEquals;
+
+
 public abstract class AbstractStorageTest {
-    private final Storage storage;
+    final Storage storage;
     private static final String DUMMY = "dummy";
     private static final String UUID_1 = "uuid1";
     private static final String UUID_2 = "uuid2";
     private static final String UUID_3 = "uuid3";
     private static final String UUID_4 = "uuid4";
     private static final String UUID_5 = "uuid5";
+    private static final String FULLNAME_1 = "uuid1_full";
+    private static final String FULLNAME_2 = "uuid2_full";
+    private static final String FULLNAME_3 = "uuid3_full";
+    private static final String FULLNAME_4 = "uuid4_full";
+    private static final String FULLNAME_5 = "uuid5_full";
     private static final Resume resume1;
     private static final Resume resume2;
     private static final Resume resume3;
     private static final Resume resume4;
-    private static final Resume resume5;
+    static final Resume resume5;
     private static final int INITIAL_SIZE = 3;
 
     static {
-        resume1 = new Resume(UUID_1);
-        resume2 = new Resume(UUID_2);
-        resume3 = new Resume(UUID_3);
-        resume4 = new Resume(UUID_4);
-        resume5 = new Resume(UUID_5);
+        resume1 = new Resume(UUID_1,FULLNAME_1);
+        resume2 = new Resume(UUID_2,FULLNAME_2);
+        resume3 = new Resume(UUID_3,FULLNAME_3);
+        resume4 = new Resume(UUID_4,FULLNAME_4);
+        resume5 = new Resume(UUID_5,FULLNAME_5);
     }
 
     public AbstractStorageTest(Storage storage) {
         this.storage = storage;
     }
 
-    @BeforeEach
+    @Before
     public void setUp() {
         storage.clear();
-        storage.save(new Resume(UUID_1));
-        storage.save(new Resume(UUID_2));
-        storage.save(new Resume(UUID_3));
+        storage.save(resume1);
+        storage.save(resume2);
+        storage.save(resume3);
     }
 
     @Test
-    void get() {
+    public void get() {
         assertGet(resume1);
     }
 
     @Test
-    void getNotExist() {
+    public void getNotExist() {
         Assertions.assertThrows(NotExistStorageException.class, () -> {
             assertGet(new Resume(DUMMY));
         });
     }
 
     @Test
-    void size() {
+    public void size() {
         assertSize(INITIAL_SIZE);
     }
 
     @Test
-    void clear() {
+    public void clear() {
         storage.clear();
         assertSize(0);
-        Assertions.assertArrayEquals(storage.getAll(), new Resume[0]);
+        Assertions.assertArrayEquals(storage.getAllSorted().toArray(new Resume[0]),new Resume[0]);
     }
 
     @Test
-    void update() {
-        Resume r3 = new Resume(UUID_3);
+    public void update() {
+        Resume r3 = new Resume(UUID_3,FULLNAME_3);
         storage.update(r3);
         assertGet(r3);
         assertSize(INITIAL_SIZE);
     }
 
     @Test
-    void updateNotExist() {
+    public void updateNotExist() {
         Assertions.assertThrows(NotExistStorageException.class, () -> {
-            storage.update(new Resume(UUID_4));
+            storage.update(new Resume(UUID_4,FULLNAME_4));
         });
     }
 
     @Test
-    void getAll() {
-        Resume[] resumes = new Resume[]{ resume2, resume1, resume3};
-        List<Resume> testList = new ArrayList<>(List.of(resumes));
-        Collections.sort(testList);
-        List<Resume> resultList = new ArrayList<>(List.of(storage.getAll()));
-        Collections.sort(resultList);
-        Assertions.assertArrayEquals(resultList.toArray(), testList.toArray());
-//        Assertions.assertArrayEquals(storage.getAll(), resumes);
+    public void getAllSorted() {
+        List<Resume> list = storage.getAllSorted();
+        assertEquals(3, list.size());
+        assertEquals(list, Arrays.asList(resume1, resume2, resume3));
     }
 
     @Test
-    void save() {
+    public void save() {
         storage.save(resume5);
         assertGet(resume5);
         assertSize(INITIAL_SIZE + 1);
     }
 
-
-
     @Test
-    void saveOverflow() {
-        if (this.getClass().getName().equals("ListStorage") || this.getClass().getName().equals("MapStorage")) {
-            Assertions.assertThrows(AssertionFailedError.class, () -> {
-                try {
-                    storage.clear();
-                    for (int i = 0; i < AbstractArrayStorage.STORAGE_LIMIT; i++) {
-                        storage.save(new Resume("uuid_" + i));
-                    }
-                    storage.save(resume5);
-                } catch (StorageException e) {
-                    Assertions.fail("Storage is full ahead of time!");
-                }
-            });
-        }
-    }
-
-    @Test
-    void saveExistStorage() {
+    public void saveExistStorage() {
         Assertions.assertThrows(ExistStorageException.class, () -> {
             storage.save(new Resume(UUID_2));
         });
     }
 
     @Test
-    void delete() {
+    public void delete() {
         Assertions.assertThrows(NotExistStorageException.class, () -> {
             storage.delete(UUID_2);
             assertSize(INITIAL_SIZE - 1);
@@ -141,17 +123,17 @@ public abstract class AbstractStorageTest {
     }
 
     @Test
-    void deleteNotExist() {
+    public void deleteNotExist() {
         Assertions.assertThrows(NotExistStorageException.class, () -> {
             storage.delete(UUID_4);
         });
     }
 
     private void assertSize(int size) {
-        Assertions.assertEquals(size, storage.size());
+        assertEquals(size, storage.size());
     }
 
     private void assertGet(Resume resume) {
-        Assertions.assertEquals(storage.get(resume.getUuid()), resume);
+        assertEquals(storage.get(resume.getUuid()), resume);
     }
 }
